tests/NormalTests/paczka1/small_fuzzy/42076292.err
Error in line 1: Dgo S273 86,9
Error in line 2: Dgo S612 2,5
Error in line 8: vzexr S273 99,30
Error in line 13: Dgo S612 71,7
